# smart_expense_bot

./: .env.example  .gitignore  LICENSE  MEJORAS_IMPLEMENTADAS.md  README.md  REDIS_SETUP.md  STEPS.md  context.md  presupuestos_ejemplo.csv  pyproject.toml  render.yaml  requirements.txt  supabase_schema.sql
.github/workflows/: ci.yml
app/: __init__.py  agent.py  config.py  database.py  main.py  media.py  memory.py  sheets.py
prompts/: README.md  system_prompt.md
tests/: __init__.py  test_agent.py  test_database.py  test_integration.py  test_media.py  test_message_buffer.py  test_sheets.py  test_smoke.py
