[tool.poetry]
name = "smart-expense-bot"
version = "0.1.0"
description = "Bot de Telegram para gestión de finanzas personales con IA"
authors = ["Tu Nombre <talero.johannes@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
python-telegram-bot = "^20.7"
openai = "^1.3.0"
langchain = "^0.2.0"
langchain-openai = "^0.1.0"
langchain-core = "^0.2.0"
supabase = "^2.10.0"
gspread = "^5.12.0"
google-auth = "^2.23.0"
redis = {version = "^5.0.0", optional = true}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"
httpx = ">=0.26.0,<0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
ruff = "^0.1.6"

[tool.poetry.extras]
redis = ["redis"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
markers = [
    "integration: tests de integración que requieren servicios externos",
    "smoke: tests rápidos para verificar conectividad a servicios"
]

